--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
 html, body, #root { height: 100%; }
+
+body {
+  background: url("./assets/noise-bg.jpg");
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+  color: white;
+}
